Register button no longer visible once user is logged in

--- a/Content/styles/src/icarus/icarus.scss
+++ b/Content/styles/src/icarus/icarus.scss
@@ -1974,7 +1974,8 @@ html {
             }
         }
         /// The USERMENU class, A menu that contains user links and details
-        &[name='USER'] {
+        //&[name='USER'] {
+        &.usermenu {
             > ul {
                 &.horizontal {
                     flex-direction: row-reverse;
